@@ -1,3 +1,7 @@
+2020-02-08  Mark Wielaard  <mark@klomp.org>
+
+	* elflint.c (check_program_header): Handle PT_GNU_PROPERTY.
+
 2020-02-07  Mark Wielaard  <mark@klomp.org>
 
 	* elflint.c (check_symtab): Check st_info isn't too big.
