@@ -1,3 +1,8 @@
+2020-02-08  Mark Wielaard  <mark@klomp.org>
+
+	* eblsegmenttypename.c (ebl_segment_type_name): Handle
+	PT_GNU_PROPERTY.
+
 2019-08-29  Mark Wielaard  <mark@klomp.org>
 
 	* Makefile.am (noinst_LIBRARIES): Add libebl.a.
